# add_library(
#     types 
#     SHARED
#     types.h
# )
# set_target_properties(types PROPERTIES LINKER_LANGUAGE CXX)
# add_library(
#     models
#     SHARED
#     models.h
# )
# set_target_properties(models PROPERTIES LINKER_LANGUAGE CXX)
# target_link_libraries(
#     models
#     types
# )

# # add_subdirectory(mapper)